--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">RXJavaApplication</string>
+    <string name="app_version">1.0.0</string>
     <string name="tab_one">首页</string>
     <string name="tab_two">消息</string>
     <string name="tab_three">个人</string>
@@ -18,4 +19,37 @@
     <string name="message_notification">开启消息通知，可及时接受信息！</string>
     <string name="open">开启</string>
     <string name="chat">聊天</string>
+    <string name="vip_open_hint">开通前，请先咨询客服</string>
+    <string name="vip_open_hot_line">升级VIP热线：400–023–1221</string>
+    <string name="vip">VIP</string>
+    <string name="no_order_form_record">暂无订单记录</string>
+    <string name="head_portrait">头像</string>
+    <string name="name">姓名</string>
+    <string name="gender">性别</string>
+    <string name="person_data">个人资料</string>
+    <string name="my_order_form">我的订单</string>
+    <string name="no_cooperator">暂无合作单位</string>
+    <string name="enable_integral">可使用积分：</string>
+    <string name="member_information">会员信息</string>
+    <string name="gain_integral">获取积分</string>
+    <string name="integral_gain">积分获取</string>
+    <string name="consume_record">消费记录</string>
+    <string name="integral_rule">积分规则</string>
+    <string name="my_integral">我的积分</string>
+    <string name="about_us">关于我们</string>
+    <string name="about_us_company">重庆乾和建筑工程有限公司 Copyright @2017</string>
+    <string name="period_of_validity">有效日期：</string>
+    <string name="default_date">00–00–00</string>
+    <string name="integral_gain_details">积分获取情况</string>
+    <string name="modify_phone_number">修改手机号</string>
+    <string name="push_setting">推送设置</string>
+    <string name="bent_down">已关闭</string>
+    <string name="check_update">检查更新</string>
+    <string name="clear_cache">清除缓存</string>
+    <string name="log_out">退出登录</string>
+    <string name="account_setting">账号设置</string>
+    <string name="identity_authentication">身份认证</string>
+    <string name="identity_authentication_hint">请上传本人手持身份证照片</string>
+    <string name="identity_authentication_example">样例：</string>
+    <string name="aptitude_query">资质查询</string>
 </resources>
