--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="tab_three">个人</string>
     <string name="tab_four">Coffee</string>
     <string name="search_hint">搜索企业/资质/人员/业绩</string>
+    <string name="fuzzy_search_hint">请输入您要查询的关键字</string>
     <string name="service_phone_number">客服电话：123 456 7890</string>
     <string name="title_activity_talent_pool">TalentPoolActivity</string>
     <string name="title_activity_feedback">FeedbackActivity</string>
@@ -76,4 +77,33 @@
     <string name="order_receiving_category">接单类别</string>
     <string name="skilled_field">擅长领域</string>
     <string name="next_step">下一步</string>
+    <string name="work_resume">工作简历</string>
+    <string name="company_name">公司名称</string>
+    <string name="enterprise_name">企业名称</string>
+    <string name="department">工作部门</string>
+    <string name="position_name">职位名称</string>
+    <string name="work_time">工作时间</string>
+    <string name="work_content">工作内容</string>
+    <string name="please_input_company_name">请输入公司名称</string>
+    <string name="please_input_your_department">请输入所在部门</string>
+    <string name="please_input_your_position">请输入职位名称</string>
+    <string name="start_time">开始时间</string>
+    <string name="end_time">结束时间</string>
+    <string name="to">至</string>
+    <string name="please_describe_the_content_of_your_work">请简述你所做工作的内容：</string>
+    <string name="select_province_and_city">选择省市</string>
+    <string name="enterprise_require">企业要求</string>
+    <string name="legal_person_name">法人姓名</string>
+    <string name="qualification_search_condition">资质条件</string>
+    <string name="performance_search_condition">业绩条件</string>
+    <string name="person_search_condition">人员条件</string>
+    <string name="credit_search_condition">信誉条件</string>
+    <string name="click_setting">点击设置</string>
+    <string name="please_enter_a_enterprise_name_to_query">请输入要查询的企业名称</string>
+    <string name="please_select_area_of_the_enterprise">请选择企业所在的位置</string>
+    <string name="please_enter_the_legal_person_name_to_query">请输入要查询的法人姓名</string>
+    <string name="unlimited">不限</string>
+    <string name="ecdemic_enterprise">外地公司</string>
+    <string name="local_enterprise">本地公司</string>
+    <string name="立即查询">立即查询</string>
 </resources>
